experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/MinInArray.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:11: error: ';' expected
          @ loop invariant 0 <= i && i <= a.length;
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:11: error: not a statement
          @ loop invariant 0 <= i && i <= a.length;
                                  ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:11: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant 0 <= i && i <= a.length;
                                ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:12: error: ';' expected
          @ loop invariant (i == 0 ==> res == Integer.MIN_VALUE);
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:12: error: not a statement
          @ loop invariant (i == 0 ==> res == Integer.MIN_VALUE);
                                   ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:12: error: ';' expected
          @ loop invariant (i == 0 ==> res == Integer.MIN_VALUE);
                                                               ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:12: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (i == 0 ==> res == Integer.MIN_VALUE);
                            ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:13: error: ';' expected
          @ loop invariant (i > 0 ==> res == (\min int j; 0 <= j && j < i; a[j]));
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:13: error: not a statement
          @ loop invariant (i > 0 ==> res == (\min int j; 0 <= j && j < i; a[j]));
                                  ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:13: error: ';' expected
          @ loop invariant (i > 0 ==> res == (\min int j; 0 <= j && j < i; a[j]));
                                                                                ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:13: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (i > 0 ==> res == (\min int j; 0 <= j && j < i; a[j]));
                            ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:14: error: ';' expected
          @ loop decreases a.length - i;
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:14: error: not a statement
          @ loop decreases a.length - i;
                                    ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MinInArray/MinInArray.java:14: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop decreases a.length - i;
                           ^
14 errors
1 warning
